--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -70,10 +70,10 @@ Our main objectives revolve around the conjecture in \ref{conj:ppad-1-hardness},
 we investigate the boundaries of $\scn{\#PPAD}-1$ with the help of the \textsc{PureCircuit} problem.
 \begin{conjecturebox}{$\scn{\#PPAD}-1$ hardness}{ppad-1-hardness}
     Every lanaguage in \scn{PPAD} can be parsimoniously reduced up to some polynomial factor, to the
-    pure circuit problem,  or more formally:
+    \textsc{PureCircuit} problem, or more formally:
     $$
     \forall L \in \scn{PPAD}, \exists f \in n^{O(1)}: 
-    \#L \subseteq^f \scn{\#PureCircuit}
+    \scn{\#L} \subseteq^f \scn{\#PureCircuit}
     $$
 \end{conjecturebox}
 
